[gd_scene load_steps=4 format=3 uid="uid://ddaq1t46wydbb"]

[ext_resource type="Script" path="res://dialogue_system/ContinueButton.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cxllua8qit72w" path="res://fonts/PTSerif-Regular.ttf" id="2_iqaby"]

[sub_resource type="GDScript" id="GDScript_5ymr0"]
script/source = "extends RichTextLabel


func _ready():
	set_font_size()


func set_font_size():
	self.add_theme_font_size_override(\"font_size\", Global.font_size)
"

[node name="ContinueButton" type="TextureButton"]
custom_minimum_size = Vector2(0, 66)
anchors_preset = 10
anchor_right = 1.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 50

[node name="Placeholder" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="ContinueText" type="RichTextLabel" parent="HBoxContainer" groups=["SpokenLines"]]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_iqaby")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
script = SubResource("GDScript_5ymr0")

[connection signal="focus_entered" from="." to="." method="_on_ContinueButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ContinueButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_ContinueButton_pressed"]
